<resources>
    <string name="app_name">ONCS</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">الاقسام</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="delete" translatable="false">DELETE</string>
    <string name="login_to">اهلا وسهلا</string>
    <string name="prompt_mobile">الهاتف المحمول</string>
    <string name="lets_go">تسجيل الدخول</string>
    <string name="complete_data">اكمل باقي البيانات</string>
    <string name="register">سجل بياناتك</string>
    <string name="prompt_name">الاسم بالكامل</string>
    <string name="prompt_mail">البريد الالكتروني</string>
    <string name="enter_code">برجاء ادخال كود التفعيل المرسل للرقم</string>
    <string name="confirm">تأكيد</string>
    <string name="loading">جاري التحميل</string>
    <string name="resend">أعد ارسال الكود</string>
    <string name="title_activity_maps">Map</string>
    <string name="area">المنطقة</string>
    <string name="add_name">اسم العنوان (المنزل )</string>
    <string name="street">اسم الشارع</string>
    <string name="building_num">رقم العمارة</string>
    <string name="floor">رقم الدور</string>
    <string name="apartment">رقم الشقة</string>
    <string name="landmark">علامة مميزة</string>
    <string name="save">اضافة</string>
    <string name="my_addresses_info">لا توجد عنواين مسجلة</string>
    <string name="my_addresses_info_txt">أضغط هنا لأضافة عنوان</string>
    <string name="action_add">اضافة عنوان</string>
    <string name="profile">حسابي الشخصي</string>
    <string name="account_info">البيانات الشخصية</string>
    <string name="my_orders">الطلبات السابقة</string>
    <string name="menu_settings">الاعدادات</string>
    <string name="menu_logout">تسجيل الخروج</string>
    <string name="pic_info">الصورة الشخصية</string>
    <string name="المنطقة">Location</string>
    <string name="update_photo">تحديث</string>
    <string name="location">المنطقة</string>
    <string name="address_info">بيانات الاتصال</string>
    <string name="edit_addresses">أضافة او تغير عنوان</string>
    <string name="edit_mobile">تحديت الموبايل</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_order">اكتب الطلبات هنا</string>
    <string name="add">أضافة طلبك</string>
    <string name="add_image_to_order">أضف صور لطلبك</string>
    <string name="add_record_to_order">اضف تسجيل صوتي لطلبك</string>
    <string name="action_delete">مسح</string>
    <string name="skip">تخطي</string>
    <string name="join">انضم كمقدم خدمة</string>
    <string name="address">العناوين</string>
    <string name="provider">مقدم الخدمة</string>
    <string name="order_details">تفاصيل الطلب</string>
    <string name="image_to_order">الصور المرفقة</string>
    <string name="record_to_order">التسجبل الصوتي المرفق</string>
    <string name="no_record_to_order">لا يوجد تسجيل صوتي</string>
    <string name="no_image_to_order">لا يوجد صور مرفقة</string>
    <string name="accept">قبول الطلب</string>
    <string name="comment">قبول بتعليق</string>
    <string name="order_number">طلب رقم</string>
    <string name="price">السعر</string>
    <string name="decline">رفض الطلب</string>
    <string name="tax">رقم البطاقة الضريبية</string>
    <string name="reg">رقم السجل التجاري</string>
    <string name="website">الموقع الالكتروني</string>
    <string name="working_hours">مواعيد العمل</string>
    <string name="from">من</string>
    <string name="to">الي</string>
    <string name="provider_name">الاسم</string>
    <string name="terms_acceptance">تسجيل الدخول يعني موافقتك</string>
    <string name="terms">الشروط والاحكام</string>
    <string name="hours">24 ساعة</string>


    <string-array name="categories">
        <item>متاجر</item>
        <item>فنين</item>
        <item>دليل المدينة</item>
    </string-array>

    <string-array name="types">
        <item>حدد نوع الخدمة</item>
        <item>متاجر</item>
        <item>فنين</item>
    </string-array>

    <string-array name="working_hours">
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
        <item>24:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
    </string-array>



    <string-array name="categories_english">
        <item>Main Dish</item>
        <item>Salad</item>
        <item>Soup</item>
    </string-array>

</resources>

