<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_apps_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_outline_black_24dp"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/my_orders" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_join"
            android:icon="@drawable/ic_add_circle_outline_black_24dp"
            android:title="@string/join" />
        <item
            android:id="@+id/nav_provider"
            android:icon="@drawable/ic_business_center_black_24dp"
            android:title="@string/provider" />
    </group>

</menu>
