<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="12dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:text="@string/pic_info"/>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="12dp"
            app:cardCornerRadius="12dp">

            <ImageView
                android:id="@+id/profile_iamge"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/avatar"/>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/photo_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_photo"
            android:background="@drawable/button_form"
            android:layout_marginTop="12dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@android:color/black"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:text="@string/account_info"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:maxLines="1"
                android:drawableStart="@drawable/avatar"
                android:drawablePadding="12dp"
                android:hint="@string/prompt_name"
                android:paddingStart="4dp"
                android:singleLine="true"
                android:textCursorDrawable="@null" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:drawableStart="@drawable/mail"
                android:drawablePadding="12dp"
                android:hint="@string/prompt_mail"
                android:paddingStart="4dp"
                android:textCursorDrawable="@null"
                android:maxLines="1"
                android:singleLine="true"
                android:focusable="false"
                android:enabled="false"/>

        </com.google.android.material.textfield.TextInputLayout>



        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/location"
                android:enabled="false" />

            <Spinner
                android:id="@+id/regions_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingStart="12dp"
                android:layout_marginStart="24dp" />
        </RelativeLayout>

        <Button
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_photo"
            android:background="@drawable/button_form"
            android:layout_marginTop="12dp"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:text="@string/address_info"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl">

            <TextView
                android:id="@+id/info_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:visibility="gone"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/addresses_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <TextView
            android:id="@+id/add_addresses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_addresses"
            android:layout_marginTop="4dp"
            android:textColor="#02A247"
            android:layout_gravity="end"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobile_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_mobile"
                android:drawableStart="@drawable/phone_icon"
                android:drawablePadding="12dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:paddingStart="4dp"
                android:textCursorDrawable="@null"
                android:maxLines="1"
                android:singleLine="true"
                android:focusable="false"
                android:enabled="false"/>


        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/edit_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_mobile"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="4dp"
            android:textColor="#02A247"
            android:layout_gravity="end"/>


    </LinearLayout>




</ScrollView>